--- a/html/artest.html
+++ b/html/artest.html
@@ -1,7 +1,30 @@
 <html>
-	<head>
-	</head>
+<head>
+
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta name="Author" content="Apple Inc.">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
+
+
+
+
+	<title>AR Quick Look Test </title>
+	<meta name="omni_page" content="ARKit - (English)">
+    <style>
+        .relar [data-hide-on-relar] {
+            display: none;
+        }
+    </style>
+</head>
+
 	<body>
 		<a href="models/outdoor.usdz" rel="ar">Download AR</a>
+		
+		
+		<a href="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster.usdz" rel="ar">
+                            <img src="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster_2x.jpg" alt="" width="250" height="250" data-hires-status="pending">
+                        </a>
+                        
 	</body>
 </html>
