--- a/html/artest.html
+++ b/html/artest.html
@@ -19,12 +19,17 @@
 </head>
 
 	<body>
-		<a href="models/outdoor.usdz" rel="ar">Download AR</a>
+		<a href="models/outdoor.usdz" rel="ar">
+			<img src="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster_2x.jpg" alt="" width="250" height="250" data-hires-status="pending">
+		</a>
 		
+		<a href="models/stratocaster.usdz" rel="ar">
+			<img src="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster_2x.jpg" alt="" width="250" height="250" data-hires-status="pending">
+		</a>
 		
 		<a href="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster.usdz" rel="ar">
-                            <img src="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster_2x.jpg" alt="" width="250" height="250" data-hires-status="pending">
-                        </a>
+			<img src="https://developer.apple.com/arkit/gallery/models/stratocaster/stratocaster_2x.jpg" alt="" width="250" height="250" data-hires-status="pending">
+		</a>
                         
 	</body>
 </html>
